--- a/style.css
+++ b/style.css
@@ -109,13 +109,31 @@ figure {
   background-color: black;
   transition: background-color 2s;
 }*/
+
+
 .carousel-item img {
     width: 100%;
     height: 100%;
 }
 body {
     overflow-x: hidden;
-//background-color: black;
+   // background-color: black;
+}
+.img-fluid {
+    padding: 10px;
+}
+
+.watches {
+    margin: auto;
+}
+.img-fluid:hover {
+    transform: translateY(-10px) translateX(10px);
+    opacity: 0.5;
+    cursor: pointer;
+    transition: 1s;
+   // box-shadow: -10px 10px red;
+    // border-radius: 10px 5px;
+
 }
 .navbar-collapse {
     margin-top: 10px;
@@ -226,6 +244,11 @@ No media query since this is the default in Bootstrap*/
     .carousel-indicators {
         display: none;
     }
+ /* image resizing on phones
+ .carousel-item img {
+        width: 567px !important;
+        height: 250px !important;
+    }*/
 }
 
 /*Medium (md) devices (tablets, 768px and up)*/
