--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ figure {
 }
 
 .navbar {
-    height: 80px;
+    height: 85px;
     background-color: black;
 }
 #logo {
@@ -115,9 +115,18 @@ figure {
     width: 100%;
     height: 100%;
 }
+ #abs {
+
+ }
 body {
     overflow-x: hidden;
    // background-color: black;
+}
+#footer {
+    background-color: black;
+}
+.carousel-indicators .active {
+    background-color: black;
 }
 .img-fluid {
     padding: 10px;
