--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ No media query since this is the default in Bootstrap*/
         position: relative
     }
     .text-center {
-        font-size: medium;
+        font-size: 23px;
     }
 
 }
