--- a/style.css
+++ b/style.css
@@ -1,92 +1,34 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
-
-
-
-
-
-
-
-
-/*---Media Queries --*/
-@media (max-width: 992px) {
-
-}
-@media (max-width: 768px) {
-
-}
-@media (max-width: 576px) {
-
-}
-
-
-
-/*---Firefox Bug Fix --*/
-.carousel-item {
-    transition: -webkit-transform 0.5s ease;
-    transition: transform 0.5s ease;
-    transition: transform 0.5s ease, -webkit-transform 0.5s ease;
-    -webkit-backface-visibility: visible;
-    backface-visibility: visible;
-}
-/*--- Fixed Background Image --*/
-figure {
-    position: relative;
-    width: 100%;
-    height: 60%;
-    margin: 0!important;
-}
-.fixed-wrap {
-    clip: rect(0, auto, auto, 0);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-#fixed {
-    background-image: url('img/mac.png');
-    position: fixed;
-    display: block;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center center;
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    will-change: transform;
-}
-/*--- Bootstrap Padding Fix --*/
 [class*="col-"] {
     padding: 1rem;
 }
+
+body {
+    overflow-x: hidden;
+    font-family: seaFutura;
+}
+
 .sticky-top {
     padding-bottom: 0px;
 }
+
 .card-img-top {
     filter:grayscale(100%);
-}
-.gif {
-    max-width: 170px;
 }
 
 .card:hover .card-img-top{
     filter: grayscale(0%) !important;
     transition: 2.5s ease;
 }
-.nav-link {
-    font-size: 1.1em !important;
-}
 
 .navbar {
     height: 85px;
     background-color: black;
 }
+
 #logo {
     transition-timing-function: ease-out;
-
 }
+
 .navbar:hover {
 // background-color: white !important;
     transition: background-color 1s;
@@ -111,22 +53,9 @@ figure {
   transition: background-color 2s;
 }*/
 
-
 .carousel-item img {
     width: 100%;
     height: 100%;
-}
- #abs {
-
- }
- @font-face {
-     font-family: seaFutura;
-     src: url("Futura Condensed Medium.otf");
- }
-
-body {
-    overflow-x: hidden;
-    font-family: seaFutura;
 }
 
 .carousel-indicators .active {
@@ -139,14 +68,24 @@ body {
 .watches {
     margin: auto;
 }
-.img-fluid:hover {
-   // transform: translateY(-10px) translateX(10px);
-  //  opacity: 0.5;
-  //  cursor: pointer;
-  //  transition: 1s;
-   // box-shadow: -10px 10px red;
-    // border-radius: 10px 5px;
 
+.watch:hover {
+    transform: translateY(-10px) translateX(10px);
+  //  opacity: 0.5;
+    cursor: pointer;
+    transition: 1s;
+ // box-shadow: -10px 10px red;
+ //    border-radius: 10px 5px;
+
+}
+
+.watch {
+    filter: grayscale(100%);
+}
+
+.watch:hover {
+    filter:grayscale(0%) !important;
+    //transition: 1.5s ease;
 }
 .navbar-collapse {
     margin-top: 10px;
@@ -157,27 +96,6 @@ body {
     left: 0;
 }
 
-.carousel-caption {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-}
-.carousel-caption h1 {
-    font-size: 500%;
-    text-transform: uppercase;
-}
-.carousel-caption h3{
-    font-size: 200%;
-    font-weight: 500;
-}
-
-.btn-btn-primary {
-    background-color: black;
-    color: white;
-}
-.btn-btn-primary:hover {
-    /*some type of action*/
-}
 .jumbotron {
     padding: 1rem;
     border-radius: 0;
@@ -199,11 +117,6 @@ body {
     margin: 0 auto;
 }
 
-.fun {
-    width: 100%;
-    margin-bottom: 2rem;
-}
-
 .social a {
     font-size: 4em;
     padding: 1em;
@@ -212,14 +125,12 @@ body {
 .fa-facebook {
     color: black;
 }
-.fa-envelope {
-    color: black;
-}
+
 .fa-instagram {
     color: black;
 }
 
-.fa-envelope:hover, .fa-instagram:hover, .fa-facebook:hover {
+.fa-instagram:hover, .fa-facebook:hover {
 
     color: #d5d5d5;
 }
@@ -238,8 +149,13 @@ hr.light-100 {
     width: 100%;
 }
 
-/*Extra small (xs) devices (portrait phones, less than 576px)
-No media query since this is the default in Bootstrap*/
+/*--- Font --*/
+@font-face {
+    font-family: seaFutura;
+    src: url("Futura Condensed Medium.otf");
+}
+
+/*---Media Queries --*/
 
 /*Small (sm) devices (landscape phones, 576px and up)*/
 @media (max-width: 576px) {
